<resources>
    <!-- General purpose strings for much win -->
    <string name="app_name">MusicOrg</string>
    <string name="label_button">Labels</string>
    <string name="release_button">Releases</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="ok">OK</string>
    <!-- Create Label Activity Labels -->
    <string name="label_label">Label:</string>
    <string name="location_label">Location:</string>
    <string name="contact_label">Contact Name:</string>
    <string name="action_create_label">New Label</string>
    <string name="action_create_release">New Release</string>
    <string name="action_about">About</string>
    <string name="about_label">Coded By:</string>
    <string name="city_label">City:</string>
    <string name="country_label">Country:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="contact_made_label">Already In Contact?</string>
    <string name="music_submitted_label">Music Submitted?</string>
    <!-- Create Release Activity Labels -->
    <string name="release_title_label">Title:</string>
    <string name="release_artists_label">Artist:</string>
    <string name="year_label">Year:</string>
    <string name="catalog_no_label">Catalog No.:</string>
    <string name="image_label">Image:</string>
    <string name="format_label">Format:</string>
    <string name="delete_label">Delete Label</string>
    <string name="delete_label_message">Are you sure you want to delete this entry?</string>
</resources>
